--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <code>&lt;source&gt;</code>. Inspecione o código para ver os comentários!
     </p>
     <!-- <audio src="audios/audio.mp3" controls preload="metadata"></audio> -->
-    <audio src="audios/audio.mp3"></audio>
+    <audio controls src="audios/audio.mp3"></audio>
 
-    <!-- <audio controls>
+     <!-- <audio controls>
       <source src="audios/audio.ogg" type="audio/ogg" />
       <source src="audios/audio.mp3" type="audio/mpeg" />
       <source src="audios/audio.wav" type="audio/wav" />
@@ -29,8 +29,9 @@
         Seu navegador não tem suporte para áudio. Recomenda-se baixar o
         <a href="https://www.google.com/chrome/" target="_blank"
           >Google Chrome</a
-        >. -->
+        >. 
       </p>
     </audio>
+     -->
   </body>
 </html>
